RESOLVED FIXED292838
[WebAudio][GStreamer] webaudio/crashtest/audioworklet-concurrent-resampler-crash.html is timing out on the post-commit bots
https://bugs.webkit.org/show_bug.cgi?id=292838
Summary [WebAudio][GStreamer] webaudio/crashtest/audioworklet-concurrent-resampler-cr...
Lauro Moura
Reported 2025-05-11 13:11:25 PDT
webaudio/crashtest/audioworklet-concurrent-resampler-crash.html GLIB History: https://results.webkit.org/?suite=layout-tests&test=webaudio%2Fcrashtest%2Faudioworklet-concurrent-resampler-crash.html&platform=GTK&platform=WPE Diff: --- /home/buildbot/worker/WPE-Linux-64-bit-Release-Tests/build/layout-test-results/webaudio/crashtest/audioworklet-concurrent-resampler-crash-expected.txt +++ /home/buildbot/worker/WPE-Linux-64-bit-Release-Tests/build/layout-test-results/webaudio/crashtest/audioworklet-concurrent-resampler-crash-actual.txt @@ -1 +1,316 @@ +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit <snip> +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit +CONSOLE MESSAGE: IndexSizeError: Channel count exceeds maximum limit +FAIL: Timed out waiting for notifyDone to be called + This test passes if it does not crash.
Attachments
Philippe Normand
Comment 1 2025-05-12 07:43:55 PDT
That's because the bot has no sound card...
Philippe Normand
Comment 2 2025-05-12 07:51:02 PDT
EWS
Comment 3 2025-05-13 00:50:06 PDT
Committed 294835@main (ef045be81df1): <https://commits.webkit.org/294835@main> Reviewed commits have been landed. Closing PR #45250 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-05-13 00:51:12 PDT
Note You need to log in before you can comment on or make changes to this bug.