[WebAudio][GStreamer] webaudio/crashtest/audioworklet-concurrent-resampler-crash.html is timing out on the post-commit bots https://bugs.webkit.org/show_bug.cgi?id=292838

Reviewed by Xabier Rodriguez-Calvar.

Fake a sound card with 2 output channels. Apparently we cannot assume test bots have an actual sound
card.

Canonical link: https://commits.webkit.org/294835@main